// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectMenu routing getWidgetSearchParameters should add the refinements according to the UI state provided 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [
    Object {
      "attributes": Array [
        "category",
      ],
      "name": "category",
    },
  ],
  "hierarchicalFacetsRefinements": Object {
    "category": Array [
      "pants",
    ],
  },
  "index": "",
  "maxValuesPerFacet": 10,
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectMenu routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "menu": Object {
    "category": "pants",
  },
}
`;

exports[`connectMenu routing getWidgetState should not override other values in the same namespace 1`] = `
Object {
  "menu": Object {
    "category": "pants",
    "othercategory": "not-pants",
  },
}
`;
